Better suited button text and icons. It is maybe still a little much (let's face it: the project dialogs have 6 buttons!) but now it should be a little more obvious than before.

The save button is now called Close while Close has become Cancel. And both have nice tooltips.

BUG: 135872

svn path=/trunk/extragear/multimedia/k3b/; revision=600421